fix: img size overflow

--- a/static/css/content.css
+++ b/static/css/content.css
@@ -55,6 +55,10 @@
     font-size: 1rem;
 }
 
+.content img {
+    max-width: 100%;
+}
+
 .content p {
     margin: 1rem 0;
     text-align: justify;
